Modernize BeanShell class generation types